<resources>
    <string name="app_name">SAIHUB</string>
    <string name="app_name_case">SAIHUB</string>
    <string name="error_tip_net">Net Error</string>
    <string name="error_tip_time_out">Time out</string>
    <string name="error_tip_json">Parse exception</string>
    <string name="not_create_address">no more address</string>
    <string name="string_cny">CNY</string>
    <string name="string_usd">USD</string>
    <string name="string_rub">RUB</string>
    <string name="content_copy_success">Copy successfully</string>
    <string name="string_net_error">Cannot find the network, please click the screen to refresh </string>
    <string name="close">close</string>
    <string name="content_copy">The content has been copied to the pasteboard</string>
    <string name="agree">Agree</string>
    <string name="agreement_tip">I have carefully read and agree to the</string>
    <string name="agreement"><u>User Agreement</u></string>
    <string name="set_tp_tip">SAIHUB Setup</string>
    <string name="login_password">Password Login</string>
    <string name="login_touch">Auth with Touch ID</string>
    <string name="reset_title">Reset Unlock\nPassword</string>
    <string name="reset_tip">If you forget unlock password, please enter anyone wallet password to reset unlock password</string>
    <string name="confirm">Confirm</string>
    <string name="reset">Reset</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_0">Set Unlock Password</string>
    <string name="reset_password_1">Repeat Unlock Password</string>
    <string name="reset_hint">Enter Anyone Wallet Password</string>
    <string name="cancel">Cancel</string>
    <string name="wallet_pwd_error">Password error, please try again</string>
    <string name="add_wallet">Add Wallet</string>
    <string name="wallet_name">Wallet Name</string>
    <string name="set_password">Set Password</string>
    <string name="pwd_tip_0">Password can\'t be less than 8 chars</string>
    <string name="pwd_tip_1">Please repeat  the password</string>
    <string name="address_type">Address Type</string>
    <string name="native_segWit">Native SegWit</string>
    <string name="nested_segWit">Nested SegWit</string>
    <string name="privacy_tip">I agree to the</string>
    <string name="privacy_service"><u>Terms of Service</u></string>
    <string name="create">Create</string>
    <string name="import_wallet">import wallet</string>
    <string name="phrase_tip_0">Write Down Recovery Phrase</string>
    <string name="phrase_tip_1">Write down your recovery phrase,don’t take screenshorts or photo, obtaining recovery phrase equals owning all ssets.</string>
    <string name="phrase_select_tip">Recovery Phrase Length</string>
    <string name="continue_desc">Continue</string>
    <string name="pwd_weak">Weak</string>
    <string name="pwd_medium">Medium</string>
    <string name="pwd_strong">Strong</string>
    <string name="recovery_title">Your Recovery Phrase</string>
    <string name="recovery_content">Write down the following words  in order.</string>
    <string name="complete_tip">Completed, Verify it</string>
    <string name="verify_title">Verify Recovery Phrase</string>
    <string name="verify_result">Validation results</string>
    <string name="verify_success">Verify success</string>
    <string name="enter_Wallet_desc">Go To Wallet</string>
    <string name="set_passphrase_desc">Set Passphrase</string>
    <string name="passphrase_tip">If you don\'t know what Passphrase is, it\'s best to skip</string>
    <string name="set_passphrase_title">Set Passphrase</string>
    <string name="set_passphrase_tip">Passphrase has no rules or length limits, please backup safely</string>
    <string name="set_passphrase_hint_0">Enter Passphrase</string>
    <string name="set_passphrase_hint_1">Please repeat  the passphrase</string>
    <string name="import_wallet_title">Import Wallet</string>
    <string name="import_wallet_tip_0">Please enter your recovery phrase,Private Key,Public Pey.</string>
    <string name="import_wallet_tip_1">Watch Wallet Address,&#160;</string>
    <string name="cold_wallet"><u>Cold Wallet</u></string>
    <string name="etc">&#160;etc.</string>
    <string name="import_wallet_hint">If enter  recovery phrase separated by space</string>
    <string name="import_desc">Import</string>
    <string name="passphrase_desc">Passphrase</string>
    <string name="passphrase_hint">Please enter Passphrase</string>
    <string name="assets">Assets</string>
    <string name="btc">BTC</string>
    <string name="usdt">USDT</string>
    <string name="wallet_list">Wallet List</string>
    <string name="add_desc">Add</string>
    <string name="wallet_btc">BTC Wallet</string>
    <string name="wallet_ob">Watch Wallet</string>
    <string name="record_all">All</string>
    <string name="record_out">Out</string>
    <string name="record_in">In</string>
    <string name="record_failed">Failed</string>
    <string name="receive">Receive</string>
    <string name="send">Send</string>
    <string name="transfer">Transfer</string>
    <string name="et_address_hint">Input or paste an address</string>
    <string name="to">To</string>
    <string name="amount">Amount</string>
    <string name="et_amount_hint">Input transfer amount</string>
    <string name="balance">Balance</string>
    <string name="miner_fee">Miner Fee</string>
    <string name="fast">Fast</string>
    <string name="avg">Avg</string>
    <string name="slow">Slow</string>
    <string name="refresh_address">Refresh Address</string>
    <string name="share">Share</string>
    <string name="details">Details</string>
    <string name="multi_sign_tip">This is a Partially Signed Bitcoin Transaction (PSBT). Please finish signing it with your hardware wallet</string>
    <string name="scan_signed">Scan Signed Transaction</string>
    <string name="signature_status">Signature Status</string>
    <string name="co_signer">co-signer%1d Signed</string>
    <string name="resignature">Resignature</string>
    <string name="send_now">Send Now</string>
    <string name="main_item_wallet">Wallet</string>
    <string name="main_item_pool">Pool</string>
    <string name="main_item_power">Power</string>
    <string name="main_item_settings">Settings</string>
    <string name="string_tips_exit">click again to exit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_observer_link">Add observer link</string>
    <string name="remark_name">Remark Name</string>
    <string name="enter_the_remark_name">Enter the remark name</string>
    <string name="poll_save_error">Pool Save Error</string>
    <string name="observer_links_list">Observer Links List</string>
    <string name="add">Add</string>
    <string name="delete_success">Delete Success</string>
    <string name="poll">Pool</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="poll_title">Pool</string>
    <string name="add_contact">Add Device</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="power_add_number_hint">Input or paste an address</string>
    <string name="poll_add_url_hint">Vaild observer link</string>
    <string name="poll_url">URL</string>
    <string name="power_save_error">Power Save Error</string>
    <string name="add_a_power">Add a Power</string>
    <string name="poll_empty_hint">Add an observer link to follow the mining pool data.</string>
    <string name="power_empty_hint">Add energy devices to follow the energy data.</string>
    <string name="power_system">Power System</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="setting_title">Setting</string>
    <string name="currency_unit">Currency Unit</string>
    <string name="address_book">Address Book</string>
    <string name="unlock_setting">Unlock Setting</string>
    <string name="app_version">App Version</string>
    <string name="languages">Languages</string>
    <string name="save">Save</string>
    <string name="add_address">Add Address</string>
    <string name="add_address_title">Add Address</string>
    <string name="foundation">Foundation</string>
    <string name="please_enter_a_name">Please Enter a name</string>
    <string name="address">Address</string>
    <string name="scan_or_paste_wallet_address">Scan or paste wallet address</string>
    <string name="address_book_save_error">Address Book Save Error</string>
    <string name="copy_address">Copy Address</string>
    <string name="edit">Edit</string>
    <string name="copy_url">Copy URL</string>
    <string name="delete">Delete</string>
    <string name="next">Next</string>
    <string name="addres_format_error">Address format error</string>
    <string name="unlocked_password">Unlocked Password</string>
    <string name="password">Password</string>
    <string name="set_password_login">Set Password Login</string>
    <string name="repeat">Repeat</string>
    <string name="unlock_password">Unlock Password</string>
    <string name="wal_two_pwd_not_match">The two passwords entered do not match, please try again</string>
    <string name="set_touch_id">Set Touch ID</string>
    <string name="wrong_passwrod">Wrong Password</string>
    <string name="saihubapp">SAIHUBApp</string>
    <string name="current_version_number">Current Version %s</string>
    <string name="update_app">Update App</string>
    <string name="update_version_hint">Update the app to the latest version</string>
    <string name="update_now">Update Now</string>
    <string name="ignore">Ignore</string>
    <string name="wallet_settings">Wallet settings</string>
    <string name="backup_private_key">Backup Private Key</string>
    <string name="modify_password">Modify Password</string>
    <string name="touch_id">Touch ID</string>
    <string name="passphrase">Passphrase</string>
    <string name="address_manager">Address Manager</string>
    <string name="delete_wallet">Delete Wallet</string>
    <string name="verify_password">Verify Password</string>
    <string name="write_down_recovery_phrase">Write Down Recovery Phrase</string>
    <string name="backup_phrase_hint1">Write down your recovery phrase,don’t take screenshorts or photo, obtaining recovery phrase equals owning all ssets.</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_old_pwd">Enter Old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="add_passphrase">Add Passphrase</string>
    <string name="please_input_a_passphrase">Please Input a Passphrase</string>
    <string name="add_passphrase_hint2">Important Information:\n1. When a Hidden Wallet is created, its Passphrase cannot be changed. If the Passphrase is lost or forgotten, the Hidden Wallet and all its assets will be irretrievable. Record and store the Passphrase securely before creating a Hidden Wallet\n\n2. Keep the Passphrase field blank to enter the default Wallet</string>
    <string name="add_passphrase_hint3">Passphrases cannot exceed 128 characters. Can consist of upper and lower case letters, digits, and symbols, but not spaces. Case Sensitive.</string>
    <string name="add_phassphrase_et_hint1">Enter a Passphrase (case sensitive)</string>
    <string name="enter_passphrase_again">Enter Passphrase Again</string>
    <string name="password_error_try_again">Password error, please try again</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="add_lightning_desc">Add Lightning</string>
    <string name="host">Host</string>
    <string name="wallet_name_hint">Enter wallet name</string>
    <string name="host_hint">Enter host</string>
</resources>