<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <com.linktech.saihub.view.sys.TopBar
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            app:title_text="@string/add_lightning_desc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="@dimen/dp_20"
            android:paddingEnd="@dimen/dp_20">

            <TextView
                style="@style/text_gray_normal_bold"
                android:layout_marginTop="@dimen/dp_24"
                android:text="@string/wallet_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.linktech.saihub.view.sys.SwitchEditText
                android:id="@+id/et_wallet_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:is_password="false"
                app:switch_hint="@string/wallet_name_hint" />

            <TextView
                style="@style/text_gray_normal_bold"
                android:layout_marginTop="@dimen/dp_24"
                android:text="@string/host"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.linktech.saihub.view.sys.SwitchEditText
                android:id="@+id/et_host"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:is_password="false"
                app:switch_hint="@string/host_hint" />

            <Button
                android:id="@+id/btn_create"
                style="@style/btn_normal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_52"
                android:layout_marginTop="@dimen/dp_42"
                android:background="@drawable/btn_normal"
                android:enabled="false"
                android:text="@string/create"
                android:textSize="@dimen/text_14_sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_cancel"
                app:layout_constraintTop_toBottomOf="@id/tv_tip" />

            <TextView
                android:id="@+id/tv_import"
                style="@style/text_black_normal_bold"
                android:layout_width="@dimen/dp_150"
                android:layout_height="@dimen/dp_30"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center"
                android:text="@string/import_desc"
                android:textColor="@color/color_FF005F6F" />

        </LinearLayout>

    </LinearLayout>
</layout>