<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <com.linktech.saihub.view.sys.TopBar
            android:id="@+id/tb_import"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            app:right_icon="@mipmap/icon_scan"
            app:title_text="@string/add_wallet" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="@dimen/dp_20"
            android:paddingEnd="@dimen/dp_20">

            <TextView
                style="@style/text_black_normal_bold"
                android:layout_marginTop="@dimen/dp_20"
                android:lineSpacingExtra="@dimen/dp_5"
                android:text="@string/import_wallet_title"
                android:textSize="@dimen/text_24_sp" />

            <TextView
                style="@style/text_black_normal"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/import_wallet_tip_0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_black_normal"
                    android:text="@string/import_wallet_tip_1" />

                <TextView
                    android:id="@+id/tv_cold_wallet"
                    style="@style/text_black_normal"
                    android:text="@string/cold_wallet"
                    android:textColor="@color/color_FF005F6F" />

                <TextView
                    style="@style/text_black_normal"
                    android:text="@string/etc" />
            </LinearLayout>

            <EditText
                android:id="@+id/et_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_156"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@drawable/shape_et_scan"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="start"
                android:hint="@string/import_wallet_hint"
                android:padding="@dimen/dp_12"
                android:textColorHint="@color/color_FFA8ACB0"
                android:textSize="@dimen/text_14_sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_24">

                <TextView
                    style="@style/text_gray_normal_bold"
                    android:text="@string/wallet_name"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_wallet_name"
                    style="@style/text_gray_normal_bold"
                    android:layout_marginStart="@dimen/dp_20"
                    android:drawablePadding="@dimen/dp_4"
                    android:textColor="@color/color_FF6D778B"
                    android:textSize="@dimen/text_20_sp"
                    app:drawableEndCompat="@mipmap/icon_arrows_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="BTC-sdsd" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btn_import"
                style="@style/btn_normal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_52"
                android:layout_marginTop="@dimen/dp_88"
                android:background="@drawable/btn_normal"
                android:enabled="false"
                android:text="@string/create"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_cancel"
                app:layout_constraintTop_toBottomOf="@id/tv_tip" />

        </LinearLayout>

    </LinearLayout>
</layout>