<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context=".ui.activity.wallet.manager.ModifyPasswordActivity">

        <com.linktech.saihub.view.sys.TopBar
            android:id="@+id/topbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            app:title_text="@string/modify_password" />


        <TextView
            android:id="@+id/tv_pwd_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/old_password"
            android:textColor="@color/color_FF686F7C"
            android:textSize="@dimen/text_14_sp" />

        <com.linktech.saihub.view.sys.SwitchEditText
            android:id="@+id/sw_et_old_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            app:et_text_size="14"
            app:front_desc="false"
            app:is_password="true"
            app:switch_hint="@string/enter_old_pwd" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_24">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/new_password"
                android:textColor="@color/color_FF686F7C"
                android:textSize="@dimen/text_14_sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.linktech.saihub.view.sys.PasswordStrengthView
                android:id="@+id/psv_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_20"
                android:text="@string/set_password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.linktech.saihub.view.sys.SwitchEditText
            android:id="@+id/sw_et_new_pwd_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/dp_20"
            app:et_text_size="14"
            app:front_desc="false"
            app:is_password="true"
            app:switch_hint="@string/enter_new_password" />

        <com.linktech.saihub.view.sys.SwitchEditText
            android:id="@+id/sw_et_new_pwd_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_20"
            app:et_text_size="14"
            app:front_desc="false"
            app:is_password="true"
            app:switch_hint="@string/repeat_password" />

        <TextView
            android:id="@+id/tv_error_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_20"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/color_FFFF3750"
            android:textSize="@dimen/text_14_sp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/view_line"
            tools:text="@string/password_error_try_again"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_20"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="right"
            android:text="@string/forget_password"
            android:textColor="@color/color_FF005F6F"
            android:textSize="@dimen/text_14_sp" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_52"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_42"
            android:layout_marginEnd="@dimen/dp_20"
            android:background="@drawable/btn_normal"
            android:enabled="false"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14_sp" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_6"
            android:fontFamily="@font/montserrat_medium"
            android:padding="@dimen/dp_10"
            android:text="@string/cancel"
            android:textColor="@color/color_FF005F6F"
            android:textSize="@dimen/text_14_sp" />

    </LinearLayout>
</layout>