<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <com.linktech.saihub.view.sys.TopBar
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="@dimen/dp_20"
            android:paddingEnd="@dimen/dp_20">

            <TextView
                style="@style/text_black_normal_bold"
                android:layout_marginTop="@dimen/dp_20"
                android:lineSpacingExtra="@dimen/dp_5"
                android:text="@string/set_passphrase_title"
                android:textSize="@dimen/text_24_sp" />

            <TextView
                style="@style/text_black_normal"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/set_passphrase_tip" />

            <com.linktech.saihub.view.sys.SwitchEditText
                android:id="@+id/et_passphrase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                app:switch_hint="@string/set_passphrase_hint_0" />

            <com.linktech.saihub.view.sys.SwitchEditText
                android:id="@+id/et_passphrase_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                app:switch_hint="@string/set_passphrase_hint_1" />

            <Button
                android:id="@+id/btn_go_to"
                style="@style/btn_normal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_52"
                android:layout_marginTop="@dimen/dp_80"
                android:background="@drawable/btn_normal"
                android:enabled="false"
                android:text="@string/enter_Wallet_desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_cancel"
                app:layout_constraintTop_toBottomOf="@id/tv_tip" />

        </LinearLayout>

    </LinearLayout>
</layout>